Layout bug fix.

--- a/src/App.scss
+++ b/src/App.scss
@@ -135,7 +135,6 @@ main {
   padding-inline: 5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
